added debugging config

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,3 +10,10 @@ upload_flags =
     scripts/interface/cmsis-dap.cfg
     -f
     scripts/board/mcb1700.cfg
+debug_tool = custom
+debug_server =
+    openocd
+    -f
+    ../scripts/interface/cmsis-dap.cfg
+    -f
+    ../scripts/board/mcb1700.cfg
