--- a/platformio.ini
+++ b/platformio.ini
@@ -1,18 +1,28 @@
 [env:lpc1768]
 platform = nxplpc
 board = lpc1768
-build_flags = -D MCB1700
-extra_scripts = extra_script.py
-upload_protocol = custom
-upload_flags =
-    -f
-    scripts/interface/cmsis-dap.cfg
-    -f
-    scripts/board/mcb1700.cfg
-debug_tool = custom
-debug_server =
-    openocd
-    -f
-    ../scripts/interface/cmsis-dap.cfg
-    -f
-    ../scripts/board/mcb1700.cfg
+
+; Blackmagic Probe
+upload_protocol = blackmagic
+upload_port = /dev/cu.usbmodem79AC68971
+
+debug_tool = blackmagic
+debug_port = /dev/cu.usbmodem79AC68971
+
+; ULINK-ME Probe
+;build_flags = -D MCB1700
+;extra_scripts = extra_script.py
+;upload_protocol = custom
+;upload_flags =
+;    -f
+;    scripts/interface/cmsis-dap.cfg
+;    -f
+;    scripts/board/mcb1700.cfg
+;debug_tool = custom
+;debug_server =
+;    openocd
+;    -f
+;    ../scripts/interface/cmsis-dap.cfg
+;    -f
+;    ../scripts/board/mcb1700.cfg
+
