update of bmp stuff, latest commit that supports lpc1768 still doesn't support debugging properly.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,7 @@
 [env:lpc1768]
 platform = nxplpc
 board = lpc1768
+framework = mbed
 
 ; Blackmagic Probe
 upload_protocol = blackmagic
@@ -8,6 +9,9 @@ upload_port = /dev/cu.usbmodem79AC68971
 
 debug_tool = blackmagic
 debug_port = /dev/cu.usbmodem79AC68971
+
+build_flags = -Og -ggdb3 
+build_unflags = -Os
 
 ; ULINK-ME Probe
 ;build_flags = -D MCB1700
