debugging mbed framework works

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,23 +3,30 @@ platform = nxplpc
 board = lpc1768
 framework = mbed
 
-; Blackmagic Probe
+
+;Blackmagic Probe
 upload_protocol = blackmagic
 upload_port = /dev/cu.usbmodem79AC68971
 
-debug_tool = blackmagic
+debug_tool = custom
 debug_port = /dev/cu.usbmodem79AC68971
-
-build_flags = -Og -ggdb3 
-build_unflags = -Os
+debug_init_cmds =
+  target extended-remote $DEBUG_PORT
+  monitor swdp_scan
+  attach 1
+  set mem inaccessible-by-default off
+  $INIT_BREAK
+  $LOAD_CMDS
 
 ; ULINK-ME Probe
 ;build_flags = -D MCB1700
 ;extra_scripts = extra_script.py
+;
 ;upload_protocol = custom
+;upload_port = /dev/cu.usbmodem79AC68971
 ;upload_flags =
 ;    -f
-;    scripts/interface/cmsis-dap.cfg
+;    scripts/interface/dummy.cfg
 ;    -f
 ;    scripts/board/mcb1700.cfg
 ;debug_tool = custom
