nothing new, still fails.

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,6 +3,10 @@ platform = nxplpc
 board = lpc1768
 ;framework = mbed
 
+;J-Link Probe
+;upload_protocol = jlink-jtag
+;debug_tool = jlink
+
 
 ;Blackmagic Probe
 upload_protocol = blackmagic
@@ -12,7 +16,7 @@ debug_tool = custom
 debug_port = /dev/cu.usbmodem79AC68971
 debug_init_cmds =
   target extended-remote $DEBUG_PORT
-  monitor swdp_scan
+  monitor jtag_scan
   attach 1
   set mem inaccessible-by-default off
   $INIT_BREAK
