reset config to swdp_scan

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@ debug_tool = custom
 debug_port = /dev/cu.usbmodem79AC68971
 debug_init_cmds =
   target extended-remote $DEBUG_PORT
-  monitor jtag_scan
+  monitor swdp_scan
   attach 1
   set mem inaccessible-by-default off
   $INIT_BREAK
