--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,14 @@
 [env:lpc1768]
 platform = nxplpc
 board = lpc1768
-;framework = mbed
+
+framework = mbed
+
+
+; ST-Link V2 Probe - Does not work with the LPC1768
+;debug_tool = stlink
+;upload_protocol = stlink
+
 
 ;J-Link Probe
 ;upload_protocol = jlink-jtag
@@ -9,30 +16,34 @@ board = lpc1768
 
 
 ;Blackmagic Probe
-upload_protocol = blackmagic
-upload_port = /dev/cu.usbmodem79AC68971
+;extra_scripts = extra_script.py
+;upload_protocol = blackmagic
+;upload_port = /dev/cu.usbmodem79AC68971
+;
+;debug_tool = custom
+;debug_port = /dev/cu.usbmodem79AC68971
+;debug_init_cmds =
+;  target extended-remote $DEBUG_PORT
+;  monitor swdp_scan
+;  attach 1
+;  $INIT_BREAK
+;  set mem inaccessible-by-default off
+;  $LOAD_CMDS
+;  monitor reset halt
 
-debug_tool = custom
-debug_port = /dev/cu.usbmodem79AC68971
-debug_init_cmds =
-  target extended-remote $DEBUG_PORT
-  monitor swdp_scan
-  attach 1
-  set mem inaccessible-by-default off
-  $INIT_BREAK
-  $LOAD_CMDS
+
+
 
 ; ULINK-ME Probe
-;build_flags = -D MCB1700
-;extra_scripts = extra_script.py
+build_flags = -D MCB1700
+extra_scripts = extra_script.py
 ;
-;upload_protocol = custom
-;upload_port = /dev/cu.usbmodem79AC68971
-;upload_flags =
-;    -f
-;    scripts/interface/dummy.cfg
-;    -f
-;    scripts/board/mcb1700.cfg
+upload_protocol = custom
+upload_flags =
+    -f
+    scripts/interface/dummy.cfg
+    -f
+    scripts/board/mcb1700.cfg
 ;debug_tool = custom
 ;debug_server =
 ;    openocd
