fix ulink-me part

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,7 +41,7 @@ extra_scripts = extra_script.py
 upload_protocol = custom
 upload_flags =
     -f
-    scripts/interface/dummy.cfg
+    scripts/interface/cmsis-dap.cfg
     -f
     scripts/board/mcb1700.cfg
 ;debug_tool = custom
