--- a/platformio.ini
+++ b/platformio.ini
@@ -1,25 +1,25 @@
 [env:lpc1768]
 platform = nxplpc
 board = lpc1768
-;framework = mbed
+
 
 ; ULINK-ME Probe
-;build_flags = -D MCB1700
-;extra_scripts = extra_script.py
-;
-;upload_protocol = custom
-;upload_flags =
-;    -f
-;    scripts/interface/cmsis-dap.cfg
-;    -f
-;    scripts/board/mcb1700.cfg
-;debug_tool = custom
-;debug_server =
-;    $PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd
-;    -f
-;    ../scripts/interface/cmsis-dap.cfg
-;    -f
-;    ../scripts/board/mcb1700.cfg
+build_flags = -D MCB1700, -Wl,-T"./scripts/target/LPC1768/LPC1768.ld"
+extra_scripts = scripts/target/LPC1768/extra_script.py
+upload_protocol = custom
+upload_flags =
+    -f
+    scripts/interface/cmsis-dap.cfg
+    -f
+    scripts/board/mcb1700.cfg
+
+debug_tool = custom
+debug_server =
+    $PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd
+    -f
+    ../scripts/interface/cmsis-dap.cfg
+    -f
+    ../scripts/board/mcb1700.cfg
 
 
 ;J-Link Probe
@@ -28,17 +28,17 @@ board = lpc1768
 
 
 ;Blackmagic Probe
-extra_scripts = extra_script.py
-upload_protocol = blackmagic
-upload_port = /dev/cu.usbmodem79AC68971
+;upload_protocol = blackmagic
+;upload_port = /dev/cu.usbmodem79AC68971
+;extra_scripts = scripts/target/LPC1768/extra_script.py
 ;
-debug_tool = custom
-debug_port = /dev/cu.usbmodem79AC68971
-debug_init_cmds =
-  target extended-remote $DEBUG_PORT
-  monitor swdp_scan
-  attach 1
-  set mem inaccessible-by-default off
-  $INIT_BREAK
-  $LOAD_CMDS
+;debug_tool = custom
+;debug_port = /dev/cu.usbmodem79AC68971
+;debug_init_cmds =
+;  target extended-remote $DEBUG_PORT
+;  monitor swdp_scan
+;  attach 1
+;  set mem inaccessible-by-default off
+;  $INIT_BREAK
+;  $LOAD_CMDS
 
