working raw blinky example with ulink-me, blackmagic and j-link

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,10 +2,12 @@
 platform = nxplpc
 board = lpc1768
 
-
-; ULINK-ME Probe
+; Needs to stay for every probe
 build_flags = -D MCB1700, -Wl,-T"./scripts/target/LPC1768/LPC1768.ld"
 extra_scripts = scripts/target/LPC1768/extra_script.py
+
+
+;ULINK-ME Probe
 upload_protocol = custom
 upload_flags =
     -f
@@ -30,7 +32,6 @@ debug_server =
 ;Blackmagic Probe
 ;upload_protocol = blackmagic
 ;upload_port = /dev/cu.usbmodem79AC68971
-;extra_scripts = scripts/target/LPC1768/extra_script.py
 ;
 ;debug_tool = custom
 ;debug_port = /dev/cu.usbmodem79AC68971
