--- a/platformio.ini
+++ b/platformio.ini
@@ -1,27 +1,32 @@
 [env:lpc1768]
+
 platform = nxplpc
 board = lpc1768
 
 ; Needs to stay for every probe
-build_flags = -D MCB1700, -Wl,-T"./scripts/target/LPC1768/LPC1768.ld"
+build_flags = -D MCB1700, -D LPC1768, -Wl,-T"./scripts/target/LPC1768/LPC1768.ld", -D DEBUG
 extra_scripts = scripts/target/LPC1768/extra_script.py
 
-
-;ULINK-ME Probe
-upload_protocol = custom
-upload_flags =
-    -f
-    scripts/interface/cmsis-dap.cfg
-    -f
-    scripts/board/mcb1700.cfg
-
-debug_tool = custom
-debug_server =
-    $PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd
-    -f
-    ../scripts/interface/cmsis-dap.cfg
-    -f
-    ../scripts/board/mcb1700.cfg
+; ignore everythin in lib folder and only add the platform specific library
+lib_ignore = ./lib
+lib_extra_dirs = ./lib/LPC1768
+;
+;
+;;ULINK-ME Probe
+;upload_protocol = custom
+;upload_flags =
+;    -f
+;    scripts/interface/cmsis-dap.cfg
+;    -f
+;    scripts/board/mcb1700.cfg
+;
+;debug_tool = custom
+;debug_server =
+;    $PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd
+;    -f
+;    ../scripts/interface/cmsis-dap.cfg
+;    -f
+;    ../scripts/board/mcb1700.cfg
 
 
 ;J-Link Probe
@@ -42,4 +47,23 @@ debug_server =
 ;  set mem inaccessible-by-default off
 ;  $INIT_BREAK
 ;  $LOAD_CMDS
+
+
+[env:atmega328p]
+platform = atmelavr
+board = atmega328p
+
+; ignore all libraries and only use the platform specific one.
+lib_ignore = ./lib
+lib_extra_dirs = ./lib/ATmega328p
+
+; build and debugging flags
+build_flags = -D ATMEGA328P, -D DEBUG
+
+
+; 
+upload_port = /dev/cu.SLAB_USBtoUART
+
+
+
 
