multi target base

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,10 @@ build_flags = -D MCB1700, -D LPC1768, -Wl,-T"./scripts/target/LPC1768/LPC1768.ld
 extra_scripts = scripts/target/LPC1768/extra_script.py
 
 ; ignore everythin in lib folder and only add the platform specific library
-lib_ignore = ./lib
-lib_extra_dirs = ./lib/LPC1768
-;
-;
-;;ULINK-ME Probe
+lib_extra_dirs = target/LPC1768
+
+
+;ULINK-ME Probe
 ;upload_protocol = custom
 ;upload_flags =
 ;    -f
@@ -35,18 +34,18 @@ lib_extra_dirs = ./lib/LPC1768
 
 
 ;Blackmagic Probe
-;upload_protocol = blackmagic
-;upload_port = /dev/cu.usbmodem79AC68971
-;
-;debug_tool = custom
-;debug_port = /dev/cu.usbmodem79AC68971
-;debug_init_cmds =
-;  target extended-remote $DEBUG_PORT
-;  monitor swdp_scan
-;  attach 1
-;  set mem inaccessible-by-default off
-;  $INIT_BREAK
-;  $LOAD_CMDS
+upload_protocol = blackmagic
+upload_port = /dev/cu.usbmodem79AC68971
+
+debug_tool = custom
+debug_port = /dev/cu.usbmodem79AC68971
+debug_init_cmds =
+  target extended-remote $DEBUG_PORT
+  monitor swdp_scan
+  attach 1
+  set mem inaccessible-by-default off
+  $INIT_BREAK
+  $LOAD_CMDS
 
 
 [env:atmega328p]
@@ -54,14 +53,13 @@ platform = atmelavr
 board = atmega328p
 
 ; ignore all libraries and only use the platform specific one.
-lib_ignore = ./lib
-lib_extra_dirs = ./lib/ATmega328p
+lib_extra_dirs = target/ATmega328p
 
 ; build and debugging flags
 build_flags = -D ATMEGA328P, -D DEBUG
 
 
-; 
+; upload port.
 upload_port = /dev/cu.SLAB_USBtoUART
 
 
