src_filter approach, #include <xyz.h> not found

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,20 @@
+[env]
+src_filter = 
+  +<*> 
+  -<.git/> 
+  -<.svn/> 
+  -<example/> 
+  -<examples/> 
+  -<test/> 
+  -<tests/> 
+
 [env:lpc1768]
 
 platform = nxplpc
 board = lpc1768
+src_filter = +<*> 
+  -<target>
+  +<traget/LPC1768/>
 
 ; Needs to stay for every probe
 build_flags = -D MCB1700, -D LPC1768, -Wl,-T"./scripts/target/LPC1768/LPC1768.ld", -D DEBUG
@@ -51,9 +64,10 @@ debug_init_cmds =
 [env:atmega328p]
 platform = atmelavr
 board = atmega328p
+src_filter = +<*> 
+  -<target>
+  +<traget/ATMEGA328P/>
 
-; ignore all libraries and only use the platform specific one.
-lib_extra_dirs = target/ATmega328p
 
 ; build and debugging flags
 build_flags = -D ATMEGA328P, -D DEBUG
