--- a/platformio.ini
+++ b/platformio.ini
@@ -7,21 +7,27 @@ src_filter =
   -<examples/> 
   -<test/> 
   -<tests/> 
+  -<target/>
 
 [env:lpc1768]
 
 platform = nxplpc
 board = lpc1768
-src_filter = +<*> 
+src_filter = 
+  +<*> 
   -<target>
   +<traget/LPC1768/>
 
-; Needs to stay for every probe
-build_flags = -D MCB1700, -D LPC1768, -Wl,-T"./scripts/target/LPC1768/LPC1768.ld", -D DEBUG
+build_flags =
+  -Wl, -T "scripts/target/LPC1768/LPC1768.ld"
+  -D LPC1768
+  -D DEBUG
+
 extra_scripts = scripts/target/LPC1768/extra_script.py
 
-; ignore everythin in lib folder and only add the platform specific library
-lib_extra_dirs = target/LPC1768
+;J-Link Probe
+upload_protocol = jlink-jtag
+debug_tool = jlink
 
 
 ;ULINK-ME Probe
@@ -41,37 +47,34 @@ lib_extra_dirs = target/LPC1768
 ;    ../scripts/board/mcb1700.cfg
 
 
-;J-Link Probe
-;upload_protocol = jlink-jtag
-;debug_tool = jlink
-
-
 ;Blackmagic Probe
-upload_protocol = blackmagic
-upload_port = /dev/cu.usbmodem79AC68971
+;upload_protocol = blackmagic
+;upload_port = /dev/cu.usbmodem79AC68971
 
-debug_tool = custom
-debug_port = /dev/cu.usbmodem79AC68971
-debug_init_cmds =
-  target extended-remote $DEBUG_PORT
-  monitor swdp_scan
-  attach 1
-  set mem inaccessible-by-default off
-  $INIT_BREAK
-  $LOAD_CMDS
+;debug_tool = custom
+;debug_port = /dev/cu.usbmodem79AC68971
+;debug_init_cmds =
+;  target extended-remote $DEBUG_PORT
+;  monitor swdp_scan
+;  attach 1
+;  set mem inaccessible-by-default off
+;  $INIT_BREAK
+;  $LOAD_CMDS
 
 
 [env:atmega328p]
 platform = atmelavr
 board = atmega328p
-src_filter = +<*> 
+
+src_filter = 
+  +<*> 
   -<target>
   +<traget/ATMEGA328P/>
 
-
 ; build and debugging flags
-build_flags = -D ATMEGA328P, -D DEBUG
-
+build_flags = 
+  -D ATMEGA328P
+  -D DEBUG
 
 ; upload port.
 upload_port = /dev/cu.SLAB_USBtoUART
