building for both platforms works ATmega328p LPC1768

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
-[env]
-src_filter = 
+[common]
+default_src_filter = 
   +<*> 
   -<.git/> 
   -<.svn/> 
@@ -9,18 +9,18 @@ src_filter =
   -<tests/> 
   -<target/>
 
-[env:lpc1768]
 
+[env:lpc1768]
 platform = nxplpc
 board = lpc1768
+
 src_filter = 
-  +<*> 
-  -<target>
+  ${common.default_src_filter} 
   +<traget/LPC1768/>
 
-build_flags =
-  -Wl, -T "scripts/target/LPC1768/LPC1768.ld"
-  -D LPC1768
+build_flags = 
+  -Wl,-T"scripts/target/LPC1768/LPC1768.ld"
+  -D LPC1768 
   -D DEBUG
 
 extra_scripts = scripts/target/LPC1768/extra_script.py
@@ -67,8 +67,7 @@ platform = atmelavr
 board = atmega328p
 
 src_filter = 
-  +<*> 
-  -<target>
+  ${common.default_src_filter} 
   +<traget/ATMEGA328P/>
 
 ; build and debugging flags
