--- a/platformio.ini
+++ b/platformio.ini
@@ -16,14 +16,15 @@ board = lpc1768
 
 src_filter = 
   ${common.default_src_filter} 
-  +<traget/LPC1768/>
+  +<traget/LPC17xx/>
 
 build_flags = 
   -Wl,-T"scripts/target/LPC1768/LPC1768.ld"
   -D LPC1768 
+  -D LPC17xx
   -D DEBUG
 
-extra_scripts = scripts/target/LPC1768/extra_script.py
+extra_scripts = "scripts/target/LPC1768/extra_script.py"
 
 ;J-Link Probe
 upload_protocol = jlink-jtag
@@ -62,9 +63,10 @@ debug_tool = jlink
 ;  $LOAD_CMDS
 
 
-[env:atmega328p]
+[env:myAVRBoard_atmega328p]
 platform = atmelavr
-board = atmega328p
+board = uno
+;board_build.f_cpu = 8000000L
 
 src_filter = 
   ${common.default_src_filter} 
@@ -79,5 +81,20 @@ build_flags =
 upload_port = /dev/cu.SLAB_USBtoUART
 
 
+[env:arduino_uno_atmega328p]
+platform = atmelavr
+board = uno
+framework = arduino
 
+src_filter = 
+  ${common.default_src_filter} 
+  +<traget/ATMEGA328P/>
+
+; build and debugging flags
+build_flags = 
+  -D ATMEGA328P
+  -D DEBUG
+
+; upload port.
+upload_port = /dev/cu.usbmodem14101
 
