one blinky example per micro controller

--- a/platformio.ini
+++ b/platformio.ini
@@ -66,7 +66,6 @@ debug_tool = jlink
 [env:myAVRBoard_atmega328p]
 platform = atmelavr
 board = uno
-;board_build.f_cpu = 8000000L
 
 src_filter = 
   ${common.default_src_filter} 
@@ -79,12 +78,15 @@ build_flags =
 
 ; upload port.
 upload_port = /dev/cu.SLAB_USBtoUART
+upload_protocol = avr911
+upload_flags =
+    -Pusb
+
 
 
 [env:arduino_uno_atmega328p]
 platform = atmelavr
 board = uno
-framework = arduino
 
 src_filter = 
   ${common.default_src_filter} 
