fixing myAVR board uoloading

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,11 +24,11 @@ build_flags =
   -D LPC17xx
   -D DEBUG
 
-extra_scripts = "scripts/target/LPC1768/extra_script.py"
+extra_scripts = scripts/target/LPC1768/extra_script.py
 
 ;J-Link Probe
-upload_protocol = jlink-jtag
-debug_tool = jlink
+;upload_protocol = jlink-jtag
+;debug_tool = jlink
 
 
 ;ULINK-ME Probe
@@ -49,23 +49,23 @@ debug_tool = jlink
 
 
 ;Blackmagic Probe
-;upload_protocol = blackmagic
-;upload_port = /dev/cu.usbmodem79AC68971
+upload_protocol = blackmagic
+upload_port = /dev/cu.usbmodem79AC68971
 
-;debug_tool = custom
-;debug_port = /dev/cu.usbmodem79AC68971
-;debug_init_cmds =
-;  target extended-remote $DEBUG_PORT
-;  monitor swdp_scan
-;  attach 1
-;  set mem inaccessible-by-default off
-;  $INIT_BREAK
-;  $LOAD_CMDS
+debug_tool = custom
+debug_port = /dev/cu.usbmodem79AC68971
+debug_init_cmds =
+  target extended-remote $DEBUG_PORT
+  monitor swdp_scan
+  attach 1
+  set mem inaccessible-by-default off
+  $INIT_BREAK
+  $LOAD_CMDS
 
 
 [env:myAVRBoard_atmega328p]
 platform = atmelavr
-board = uno
+board = ATmega328P
 
 src_filter = 
   ${common.default_src_filter} 
@@ -79,8 +79,8 @@ build_flags =
 ; upload port.
 upload_port = /dev/cu.SLAB_USBtoUART
 upload_protocol = avr911
-upload_flags =
-    -Pusb
+upload_speed = 19200
+upload_flags = -e
 
 
 
