use j-link probe

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,8 +27,8 @@ build_flags =
 extra_scripts = scripts/target/LPC1768/extra_script.py
 
 ;J-Link Probe
-;upload_protocol = jlink-jtag
-;debug_tool = jlink
+upload_protocol = jlink-jtag
+debug_tool = jlink
 
 
 ;ULINK-ME Probe
@@ -49,18 +49,18 @@ extra_scripts = scripts/target/LPC1768/extra_script.py
 
 
 ;Blackmagic Probe
-upload_protocol = blackmagic
-upload_port = /dev/cu.usbmodem79AC68971
-
-debug_tool = custom
-debug_port = /dev/cu.usbmodem79AC68971
-debug_init_cmds =
-  target extended-remote $DEBUG_PORT
-  monitor swdp_scan
-  attach 1
-  set mem inaccessible-by-default off
-  $INIT_BREAK
-  $LOAD_CMDS
+;upload_protocol = blackmagic
+;upload_port = /dev/cu.usbmodem79AC68971
+;
+;debug_tool = custom
+;debug_port = /dev/cu.usbmodem79AC68971
+;debug_init_cmds =
+;  target extended-remote $DEBUG_PORT
+;  monitor swdp_scan
+;  attach 1
+;  set mem inaccessible-by-default off
+;  $INIT_BREAK
+;  $LOAD_CMDS
 
 
 [env:myAVRBoard_atmega328p]
