analog folder structure like the multi target branch

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,30 +3,31 @@ platform = nxplpc
 board = lpc1768
 
 ; Needs to stay for every probe
-build_flags = -D MCB1700, -Wl,-T"./scripts/target/LPC1768/LPC1768.ld"
+build_flags = 
+    -Wl,-T"scripts/target/LPC1768/LPC1768.ld"
 extra_scripts = scripts/target/LPC1768/extra_script.py
 
 
 ;ULINK-ME Probe
-upload_protocol = custom
-upload_flags =
-    -f
-    scripts/interface/cmsis-dap.cfg
-    -f
-    scripts/board/mcb1700.cfg
-
-debug_tool = custom
-debug_server =
-    $PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd
-    -f
-    ../scripts/interface/cmsis-dap.cfg
-    -f
-    ../scripts/board/mcb1700.cfg
+;upload_protocol = custom
+;upload_flags =
+;    -f
+;    scripts/interface/cmsis-dap.cfg
+;    -f
+;    scripts/board/mcb1700.cfg
+;
+;debug_tool = custom
+;debug_server =
+;    $PLATFORMIO_CORE_DIR/packages/tool-openocd/bin/openocd
+;    -f
+;    ../scripts/interface/cmsis-dap.cfg
+;    -f
+;    ../scripts/board/mcb1700.cfg
 
 
 ;J-Link Probe
-;upload_protocol = jlink-jtag
-;debug_tool = jlink
+upload_protocol = jlink-jtag
+debug_tool = jlink
 
 
 ;Blackmagic Probe
