fixing LPC1768 build

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,7 @@ default_src_filter =
   -<examples/> 
   -<test/> 
   -<tests/> 
-  -<target/>
+  -<src/target/> # Ultra Important: to prefix with src/
 
 
 [env:lpc1768]
