working multitarget blinky example.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,5 @@
 [common]
+
 default_src_filter = 
   +<*> 
   -<.git/> 
@@ -7,7 +8,10 @@ default_src_filter =
   -<examples/> 
   -<test/> 
   -<tests/> 
-  -<src/target/> # Ultra Important: to prefix with src/
+  -<target/>
+# platformIO seems to have an inconsistent behaviour in regard to the
+# starting directory. sometimes target/ needs to be prefixed with src/ 
+# and sometimes it doesn't need to
 
 
 [env:lpc1768]
@@ -16,22 +20,21 @@ board = lpc1768
 
 src_filter = 
   ${common.default_src_filter} 
-  +<traget/LPC17xx/>
+  +<traget/MCB1760/>
 
 build_flags = 
-  -Wl,-T"scripts/target/LPC1768/LPC1768.ld"
-  -D LPC1768 
-  -D LPC17xx
+  -Wl,-T"scripts/target/MCB1760/LPC1768.ld"
+  -D MCB1760 
   -D DEBUG
 
-extra_scripts = scripts/target/LPC1768/extra_script.py
+extra_scripts = scripts/target/MCB1760/firmware_patch.py
 
-;J-Link Probe
+# J-Link Probe
 upload_protocol = jlink-jtag
 debug_tool = jlink
 
 
-;ULINK-ME Probe
+# ULINK-ME Probe
 ;upload_protocol = custom
 ;upload_flags =
 ;    -f
@@ -48,7 +51,7 @@ debug_tool = jlink
 ;    ../scripts/board/mcb1700.cfg
 
 
-;Blackmagic Probe
+# Blackmagic Probe
 ;upload_protocol = blackmagic
 ;upload_port = /dev/cu.usbmodem79AC68971
 ;
@@ -63,20 +66,20 @@ debug_tool = jlink
 ;  $LOAD_CMDS
 
 
-[env:myAVRBoard_atmega328p]
+[env:myAVR_Board_MK2_2.20]
 platform = atmelavr
 board = ATmega328P
 
 src_filter = 
   ${common.default_src_filter} 
-  +<traget/ATMEGA328P/>
+  +<traget/MYAVR_BOARD_MK2/>
 
-; build and debugging flags
+# build and debugging flags
 build_flags = 
-  -D ATMEGA328P
+  -D MYAVR_BOARD_MK2
   -D DEBUG
 
-; upload port.
+# upload port.
 upload_port = /dev/cu.SLAB_USBtoUART
 upload_protocol = avr911
 upload_speed = 19200
@@ -84,19 +87,19 @@ upload_flags = -e
 
 
 
-[env:arduino_uno_atmega328p]
+[env:Arduino_UNO]
 platform = atmelavr
 board = uno
 
 src_filter = 
   ${common.default_src_filter} 
-  +<traget/ATMEGA328P/>
+  +<traget/ARDUINO_UNO/>
 
-; build and debugging flags
+# build and debugging flags
 build_flags = 
-  -D ATMEGA328P
+  -D ARDUINO_UNO
   -D DEBUG
 
-; upload port.
+# upload port.
 upload_port = /dev/cu.usbmodem14101
 
