added stm32f407g blinky example

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,22 @@ default_src_filter =
 # platformIO seems to have an inconsistent behaviour in regard to the
 # starting directory. sometimes target/ needs to be prefixed with src/ 
 # and sometimes it doesn't need to
+[env:stm32f407g]
+platform = ststm32
+board = disco_f407vg
+framework = cmsis
+
+src_filter = 
+  ${common.default_src_filter} 
+  +<traget/STM32F407G/>
+
+build_flags = 
+  -D STM32F407G
+  -D DEBUG
+
+upload_protocol = stlink
+upload_port = /dev/cu.usbmodem14103
+debug_tool = stlink
 
 
 [env:lpc1768]
