--- a/platformio.ini
+++ b/platformio.ini
@@ -9,20 +9,22 @@ default_src_filter =
   -<test/> 
   -<tests/> 
   -<target/>
+
 # platformIO seems to have an inconsistent behaviour in regard to the
 # starting directory. sometimes target/ needs to be prefixed with src/ 
 # and sometimes it doesn't need to
-[env:stm32f407g]
+
+[env:stm32f407vg]
 platform = ststm32
 board = disco_f407vg
 framework = cmsis
 
 src_filter = 
   ${common.default_src_filter} 
-  +<traget/STM32F407G/>
+  +<traget/STM32F407VG/>
 
 build_flags = 
-  -D STM32F407G
+  -D STM32F407VG
   -D DEBUG
 
 upload_protocol = stlink
