--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,7 @@ src_filter =
   +<traget/STM32F407VG/>
 
 build_flags = 
+  -Wl,-T"scripts/target/STM32F407VG/STM32F407VG.ld"
   -D STM32F407VG
   -D DEBUG
 
