removing cmsis framework of stm32f4... src_filter doesn't build the files in the target directories.

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,16 +17,16 @@ default_src_filter =
 [env:stm32f407vg]
 platform = ststm32
 board = disco_f407vg
-framework = cmsis
+;framework = cmsis
 
 src_filter = 
   ${common.default_src_filter} 
   +<traget/STM32F407VG/>
 
 build_flags = 
-  -Wl,-T"scripts/target/STM32F407VG/STM32F407VG.ld"
   -D STM32F407VG
   -D DEBUG
+ ;-Wl,-T"scripts/target/STM32F407VG/STM32F407VG.ld"
 
 upload_protocol = stlink
 upload_port = /dev/cu.usbmodem14103
