fml, typo. TODO: fix stm32f407vg build(maybe w/o cmsis)

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ board = disco_f407vg
 
 src_filter = 
   ${common.default_src_filter} 
-  +<traget/STM32F407VG/>
+  +<target/STM32F407VG/>
 
 build_flags = 
   -D STM32F407VG
@@ -39,7 +39,7 @@ board = lpc1768
 
 src_filter = 
   ${common.default_src_filter} 
-  +<traget/MCB1760/>
+  +<target/MCB1760/>
 
 build_flags = 
   -Wl,-T"scripts/target/MCB1760/LPC1768.ld"
@@ -91,7 +91,7 @@ board = ATmega328P
 
 src_filter = 
   ${common.default_src_filter} 
-  +<traget/MYAVR_BOARD_MK2/>
+  +<target/MYAVR_BOARD_MK2/>
 
 # build and debugging flags
 build_flags = 
@@ -112,7 +112,7 @@ board = uno
 
 src_filter = 
   ${common.default_src_filter} 
-  +<traget/ARDUINO_UNO/>
+  +<target/ARDUINO_UNO/>
 
 # build and debugging flags
 build_flags = 
