updated cmsis of cortex m4 and m4 to cmsis5, testing interrupt stuff

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,6 @@
+[platformio]
+default_envs = lpc1768
+
 [common]
 
 default_src_filter = 
@@ -9,6 +12,7 @@ default_src_filter =
   -<test/> 
   -<tests/> 
   -<target/>
+  -<shared/>
 
 # platformIO seems to have an inconsistent behaviour in regard to the
 # starting directory. sometimes target/ needs to be prefixed with src/ 
@@ -23,6 +27,7 @@ src_filter =
   ${common.default_src_filter} 
   +<target/STM32F407VG/>
 
+build_type = debug
 build_flags = 
   -D STM32F407VG
   -D DEBUG
@@ -41,6 +46,7 @@ src_filter =
   ${common.default_src_filter} 
   +<target/MCB1760/>
 
+build_type = debug
 build_flags = 
   -Wl,-T"scripts/target/MCB1760/LPC1768.ld"
   -D MCB1760 
@@ -93,6 +99,7 @@ src_filter =
   ${common.default_src_filter} 
   +<target/MYAVR_BOARD_MK2/>
 
+build_type = debug
 # build and debugging flags
 build_flags = 
   -D MYAVR_BOARD_MK2
@@ -114,6 +121,7 @@ src_filter =
   ${common.default_src_filter} 
   +<target/ARDUINO_UNO/>
 
+build_type = debug
 # build and debugging flags
 build_flags = 
   -D ARDUINO_UNO
