encapsulated vector table. + trigger software interrupt

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,11 @@ default_src_filter =
   -<target/>
   -<shared/>
 
+# C++17 is needed for inline static definitions.
+build_flags =
+  -std=c++1z
+  -std=gnu++1z
+
 # platformIO seems to have an inconsistent behaviour in regard to the
 # starting directory. sometimes target/ needs to be prefixed with src/ 
 # and sometimes it doesn't need to
@@ -29,6 +34,7 @@ src_filter =
 
 build_type = debug
 build_flags = 
+  ${common.build_flags}
   -D STM32F407VG
   -D DEBUG
  ;-Wl,-T"scripts/target/STM32F407VG/STM32F407VG.ld"
@@ -48,6 +54,7 @@ src_filter =
 
 build_type = debug
 build_flags = 
+  ${common.build_flags}
   -Wl,-T"scripts/target/MCB1760/LPC1768.ld"
   -D MCB1760 
   -D DEBUG
@@ -102,6 +109,7 @@ src_filter =
 build_type = debug
 # build and debugging flags
 build_flags = 
+  ${common.build_flags}
   -D MYAVR_BOARD_MK2
   -D DEBUG
 
@@ -124,6 +132,7 @@ src_filter =
 build_type = debug
 # build and debugging flags
 build_flags = 
+  ${common.build_flags}
   -D ARDUINO_UNO
   -D DEBUG
 
