remove arduino uno target

--- a/platformio.ini
+++ b/platformio.ini
@@ -121,21 +121,21 @@ upload_flags = -e
 
 
 
-[env:Arduino_UNO]
-platform = atmelavr
-board = uno
+#[env:Arduino_UNO]
+#platform = atmelavr
+#board = uno
 
-src_filter = 
-  ${common.default_src_filter} 
-  +<target/ARDUINO_UNO/>
+#src_filter = 
+  #${common.default_src_filter} 
+  #+<target/ARDUINO_UNO/>
 
-build_type = debug
-# build and debugging flags
-build_flags = 
-  ${common.build_flags}
-  -D ARDUINO_UNO
-  -D DEBUG
+#build_type = debug
+## build and debugging flags
+#build_flags = 
+  #${common.build_flags}
+  #-D ARDUINO_UNO
+  #-D DEBUG
 
-# upload port.
-upload_port = /dev/cu.usbmodem14101
+## upload port.
+#upload_port = /dev/cu.usbmodem14101
 
