starting with atmega328p consolidation, some progress

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,15 +12,17 @@ default_src_filter =
   -<test/> 
   -<tests/> 
   -<target/>
+  -<controllers/>
   -<shared/>
 
 # C++17 is needed for inline static definitions.
+# if no inline static is used, these flags can be omitted
 build_flags =
   -std=c++1z
   -std=gnu++1z
 
 # platformIO seems to have an inconsistent behaviour in regard to the
-# starting directory. sometimes target/ needs to be prefixed with src/ 
+# starting directory. sometimes controllers/ needs to be prefixed with src/ 
 # and sometimes it doesn't need to
 
 [env:stm32f407vg]
@@ -30,14 +32,15 @@ board = disco_f407vg
 
 src_filter = 
   ${common.default_src_filter} 
-  +<target/STM32F407VG/>
+  +<controllers/stm32f407vg/>
 
 build_type = debug
 build_flags = 
   ${common.build_flags}
   -D STM32F407VG
+  -D stm32f407vg
   -D DEBUG
- ;-Wl,-T"scripts/target/STM32F407VG/STM32F407VG.ld"
+ ;-Wl,-T"scripts/controllers/stm32f407vg/STM32F407VG.ld"
 
 upload_protocol = stlink
 upload_port = /dev/cu.usbmodem14103
@@ -50,23 +53,25 @@ board = lpc1768
 
 src_filter = 
   ${common.default_src_filter} 
-  +<target/MCB1760/>
+  +<controllers/lpc1768/>
 
 build_type = debug
 build_flags = 
   ${common.build_flags}
-  -Wl,-T"scripts/target/MCB1760/LPC1768.ld"
+  -Wl,-T"scripts/controllers/lpc1768/LPC1768.ld"
+  -D LPC1768
+  -D lpc1768
   -D MCB1760 
   -D DEBUG
 
-extra_scripts = scripts/target/MCB1760/firmware_patch.py
+extra_scripts = scripts/controllers/lpc1768/firmware_patch.py
 
 # J-Link Probe
 upload_protocol = jlink-jtag
 debug_tool = jlink
 
 
-# ULINK-ME Probe
+# ULINK-ME Probe - the probe that comes with the development board, literally not usable
 ;upload_protocol = custom
 ;upload_flags =
 ;    -f
@@ -83,7 +88,7 @@ debug_tool = jlink
 ;    ../scripts/board/mcb1700.cfg
 
 
-# Blackmagic Probe
+# Blackmagic Probe - open source is sometimes not the best solution, as it took ages to find a working BMP firmware that works with the board.
 ;upload_protocol = blackmagic
 ;upload_port = /dev/cu.usbmodem79AC68971
 ;
@@ -98,19 +103,20 @@ debug_tool = jlink
 ;  $LOAD_CMDS
 
 
-[env:myAVR_Board_MK2_2.20]
+[env:atmega328p]
 platform = atmelavr
 board = ATmega328P
 
 src_filter = 
   ${common.default_src_filter} 
-  +<target/MYAVR_BOARD_MK2/>
+  +<controllers/atmega328p/>
 
 build_type = debug
 # build and debugging flags
 build_flags = 
   ${common.build_flags}
-  -D MYAVR_BOARD_MK2
+  -D ATMEGA328P
+  -D atmega328p
   -D DEBUG
 
 # upload port.
@@ -122,20 +128,21 @@ upload_flags = -e
 
 
 #[env:Arduino_UNO]
-#platform = atmelavr
-#board = uno
+;platform = atmelavr
+;board = uno
 
-#src_filter = 
-  #${common.default_src_filter} 
-  #+<target/ARDUINO_UNO/>
+;src_filter = 
+  ;${common.default_src_filter} 
+  ;+<controllers/ARDUINO_UNO/>
 
-#build_type = debug
-## build and debugging flags
-#build_flags = 
-  #${common.build_flags}
-  #-D ARDUINO_UNO
-  #-D DEBUG
+;build_type = debug
 
-## upload port.
-#upload_port = /dev/cu.usbmodem14101
+# build and debugging flags
+;build_flags = 
+  ;${common.build_flags}
+  ;-D ARDUINO_UNO
+  ;-D DEBUG
+
+# upload port.
+;upload_port = /dev/cu.usbmodem14101
 
