--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 default_envs = stm32f407vg
 
 [common]
-default_src_filter = 
+src_filter = 
   +<*> 
   -<.git/> 
   -<.svn/> 
@@ -20,24 +20,24 @@ build_flags =
   -std=c++1z
   -std=gnu++1z
 
+[env]
+build_type = debug
+
 
 [env:atmega328p]
 platform = atmelavr
 board = ATmega328P
 
 src_filter = 
-  ${common.default_src_filter} 
+  ${common.src_filter} 
   +<controllers/atmega328p/>
 
-build_type = debug
-# build and debugging flags
 build_flags = 
   ${common.build_flags}
   -D ATMEGA328P
   -D atmega328p
   -D DEBUG
 
-# upload port.
 upload_port = /dev/cu.SLAB_USBtoUART
 upload_protocol = avr911
 upload_speed = 19200
@@ -51,17 +51,14 @@ platform = nxplpc
 board = lpc1768
 
 src_filter = 
-  ${common.default_src_filter} 
+  ${common.src_filter} 
   +<controllers/lpc1768/>
 
-build_type = debug
 build_flags = 
   ${common.build_flags}
-  -Wl,-T"scripts/controllers/lpc1768/LPC1768.ld"
   -D LPC1768
-  -D lpc1768
-  -D MCB1760 
   -D DEBUG
+  -Wl,-T"scripts/controllers/lpc1768/LPC1768.ld"
 
 extra_scripts = scripts/controllers/lpc1768/firmware_patch.py
 
@@ -110,10 +107,9 @@ board = disco_f407vg
 ;framework = cmsis
 
 src_filter = 
-  ${common.default_src_filter} 
+  ${common.src_filter} 
   +<controllers/stm32f407vg/>
 
-build_type = debug
 build_flags = 
   ${common.build_flags}
   -D STM32F407VG
