--- a/platformio.ini
+++ b/platformio.ini
@@ -30,7 +30,7 @@ board = ATmega328P
 
 src_filter = 
   ${common.src_filter} 
-  +<controllers/atmega328p/>
+;  +<controllers/atmega328p/>
 
 build_flags = 
   ${common.build_flags}
