--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = stm32f407vg
+default_envs = lpc1768
 
 [common]
 src_filter = 
@@ -108,12 +108,11 @@ board = disco_f407vg
 
 src_filter = 
   ${common.src_filter} 
-  +<controllers/stm32f407vg/>
+;  +<controllers/stm32f407vg/>
 
 build_flags = 
   ${common.build_flags}
   -D STM32F407VG
-  -D stm32f407vg
   -D DEBUG
  ;-Wl,-T"scripts/controllers/stm32f407vg/STM32F407VG.ld"
 
