stm32f407vg blinky works properly.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = lpc1768
+default_envs = stm32f407vg
 
 [common]
 src_filter = 
@@ -104,17 +104,15 @@ debug_tool = jlink
 [env:stm32f407vg]
 platform = ststm32
 board = disco_f407vg
-;framework = cmsis
 
 src_filter = 
   ${common.src_filter} 
-;  +<controllers/stm32f407vg/>
+  +<controllers/stm32f407vg/>
 
 build_flags = 
   ${common.build_flags}
   -D STM32F407VG
   -D DEBUG
- ;-Wl,-T"scripts/controllers/stm32f407vg/STM32F407VG.ld"
 
 upload_protocol = stlink
 upload_port = /dev/cu.usbmodem14103
