arduino minimal example

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,7 @@ src_filter =
   -<controllers/>
   -<shared/>
 
-# C++17 is needed for inline static definitions.
-# if no inline static is used, these flags can be omitted
+
 build_flags =
 
 [env]
@@ -25,6 +24,7 @@ build_type = debug
 [env:atmega328p]
 platform = atmelavr
 board = ATmega328P
+framework = arduino
 
 src_filter = 
   ${common.src_filter} 
@@ -47,6 +47,7 @@ upload_flags = -e
 [env:lpc1768]
 platform = nxplpc
 board = lpc1768
+framework = mbed
 
 src_filter = 
   ${common.src_filter} 
@@ -56,9 +57,9 @@ build_flags =
   ${common.build_flags}
   -D LPC1768
   -D DEBUG
-  -Wl,-T"scripts/controllers/lpc1768/LPC1768.ld"
+;  -Wl,-T"scripts/controllers/lpc1768/LPC1768.ld"
 
-extra_scripts = scripts/controllers/lpc1768/firmware_patch.py
+;extra_scripts = scripts/controllers/lpc1768/firmware_patch.py
 
 # J-Link Probe
 upload_protocol = jlink-jtag
@@ -102,7 +103,7 @@ debug_tool = jlink
 [env:stm32f407vg]
 platform = ststm32
 board = disco_f407vg
-;framework = cmsis
+framework = mbed
 
 src_filter = 
   ${common.src_filter} 
