--- a/platformio.ini
+++ b/platformio.ini
@@ -113,9 +113,9 @@ build_flags =
   -D STM32F407VG
   -D stm32f407vg
   -D DEBUG
- ;-Wl,-T"scripts/controllers/stm32f407vg/STM32F407VG.ld"
+  -Wl,-T"scripts/controllers/stm32f407vg/STM32F407VG.ld"
 
 upload_protocol = stlink
-upload_port = /dev/cu.usbmodem14103
+upload_port = /dev/cu.usbmodem142403
 debug_tool = stlink
 
